--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,14 @@
                 </ul>       
                 <ul class="list portfolio-container">
                         <li class="portfolio-card">
-                            <img src="./images/websitetechno.jpg" alt="веб-сторніка з фото" width="370" class="image">
+                            <div class="portfolio-thumb">
+                                <img src="./images/websitetechno.jpg" alt="веб-сторніка з фото" width="370" class="image">
+                                <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.</div>
+                                <!-- <p class="text-thumb">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.</p> -->
+                            </div>
+                            
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Технокряк</h3>
                                 <p class="text-portfolio">Веб-сайт</p>
