--- a/portfolio.html
+++ b/portfolio.html
@@ -77,68 +77,133 @@
                         <li class="portfolio-card">
                             <div class="portfolio-thumb">
                                 <img src="./images/websitetechno.jpg" alt="веб-сторніка з фото" width="370" class="image">
-                                <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                                вичерпні відомості про компанію чи приватну особу.</div>
-                                <!-- <p class="text-thumb">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                                вичерпні відомості про компанію чи приватну особу.</p> -->
-                            </div>
-                            
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>                              
+                            </div>                            
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Технокряк</h3>
                                 <p class="text-portfolio">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/poster.jpg" alt="баскетбольний постер" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/poster.jpg" alt="баскетбольний постер" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Постер New Orlean vs Golden Star</h3>
                                 <p class="text-portfolio">Дизайн</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/appforrestaurent.jpg" alt="логотип рибного ресторану" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/appforrestaurent.jpg" alt="логотип рибного ресторану" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Ресторан Seafood</h3>
                                 <p class="text-portfolio">Додаток</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/projectprime.jpg" alt="Навушники повноразмірні" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/projectprime.jpg" alt="Навушники повноразмірні" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Проєкт Prime</h3>
                                 <p class="text-portfolio">Маркетинг</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/appboxes.jpg" alt="Коробки з оформленням" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/appboxes.jpg" alt="Коробки з оформленням" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Проєкт Boxes</h3>
                                 <p class="text-portfolio">Додаток</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/websiteinspiration.jpg" alt="Монітор з картою світу" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/websiteinspiration.jpg" alt="Монітор з картою світу" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Inspiration has no Borders</h3>
                                 <p class="text-portfolio">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/limitedbook.jpg" alt="Дизайн книги" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/limitedbook.jpg" alt="Дизайн книги" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Видання Limited Edition</h3>
                                 <p class="text-portfolio">Дизайн</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/projectlab.jpg" alt="Картка з написом" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/projectlab.jpg" alt="Картка з написом" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Проєкт LAB</h3>
                                 <p class="text-portfolio">Маркетинг</p>
                             </div>
                         </li>
                         <li class="portfolio-card">
-                            <img src="./images/appforgrowing.jpg" alt="Приложение для бизнеса" width="370" class="image">
+                            <div class="portfolio-thumb">                            
+                                <img src="./images/appforgrowing.jpg" alt="Приложение для бизнеса" width="370" class="image">
+                                    <div class="overlay-box">
+                                        <div class="text-thumb"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.
+                                        </div>
+                                    </div>
+                            </div>
                             <div class="portfolio-title">
                                 <h3 class="list-title-portfolio">Growing Business</h3>
                                 <p class="text-portfolio">Додаток</p>
