--- a/index.html
+++ b/index.html
@@ -427,13 +427,16 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="close-button" data-modal-close>
-                <!-- <div class="close-button-container"> -->
-                    <svg class="close-button-icon" width="30" height="30">
-                        <use href="./images/symbol-defs.svg#close">
+                <!-- <span class="close-button-icon">
+                    <svg class="close-icon" width="30" height="30">
+                        <use href="./images/symbol-defs.svg#close" >
                         </use>
-                    </svg>
+                    </svg> 
+                </span> -->
+                <!-- <div class="close-button-container"> -->
+                    
                 <!-- </div>                 -->
-                <!-- <span>+</span> -->
+                <span class="close-icon">+</span>
             </button>
         </div>
     </div>
